syntax = "proto3";
package SDFSMessage;

enum OpType {
  PUT = 0;
  GET = 1;
  DELETE = 2;
  GET_VERSIONS = 3;
  LS = 4;
  STORE = 5;
}

enum OpStatus {
  OK = 0;
  CREATE = 1;
  DEL = 2;
}

message Node {
  string host_name = 1;
  string host_ip = 2;
  int64 port = 3;
}

message OpResponse {
  OpStatus status = 1;
}

message MetadataOpRequest {
  OpType op = 1;
  string sdfs_filename = 2;
  string local_filename = 3;
  int64 versions = 4;
  Node requestor = 5;
}

message MetadataOpResponse {
  OpStatus status = 1;
  repeated Node hosts = 2;
  int64 versions = 3;
}

message FileOpRequest {
  OpType op = 1;
  string sdfs_filename = 2;
  bytes file = 3;
  int64 versions = 4;
}

message FileOpResponse {
  OpStatus status = 1;
  bytes file = 2;
}

message ReplicateRequest {
  Node src = 1;
  Node dst = 2;
  string filename = 3;
}

message FailureReportRequest {
  Node failed_node = 1;
}

message UpdateMetaRequest {
  Node update_node = 1;
  string sdfs_filename = 2;
  int64 versions = 3;
}

service Sdfs {
  rpc MetadataOp(MetadataOpRequest) returns (MetadataOpResponse) {}
  rpc UpdateMeta(UpdateMetaRequest) returns (OpResponse) {}
  rpc FileOp(stream FileOpRequest) returns (stream FileOpResponse) {}
  rpc Replicate(ReplicateRequest) returns (OpResponse) {}
  rpc FailureReport(FailureReportRequest) returns (OpResponse) {}
  rpc HandleLocalClient(MetadataOpRequest) returns (OpResponse) {}
}